[package]
name = "icy_sauce"
version = "0.2.0"
edition = "2024"
authors = ["Mike Krüger <mkrueger@posteo.de>"]
description = "Library for handling SAUCE – Standard Architecture for Universal Comment Extensions"
homepage = "https://github.com/mkrueger/icy_sauce"
repository = "https://github.com/mkrueger/icy_sauce"
license-file = "LICENSE"
keywords = ["ansi", "ansiart", "sauce"]

[dependencies]
thiserror = "2.0.17"
bstr = "1.12.1"
chrono = "0.4.42"
log = "0.4.28"

[dev-dependencies]
clap = { version = "4.0", features = ["derive"] }

[[example]]
name = "print_sauce"
path = "example/print_sauce.rs"